--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laboratorio 9</title>
-    <link rel="Estilos.css">
+    <link href="Estilos.css" rel="stylesheet">
 </head>
 <body>
     <header>
