--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <a href="#">Contacto</a>
     </nav>
     <main>
-        <div>  
+        <div class="contenedor">  
             <H2>Bienvenidos</H2>
             <p>Este en un ejemplo de cómo aplicar estilos a textos y contenedores en una página web.</p>
         </div>
-        <div>
+        <div class="contenedor">
             <h2>A cerca de nosotros</h2>
             <p>Utilizamos CSS para mejorar la presentación y hacer que el contenido sea más atractivo.</p>
         </div>
